feat: add check length

--- a/form_validator/index.html
+++ b/form_validator/index.html
@@ -43,8 +43,9 @@
                 <input type="password-confirm" id="user-password-confirm" placeholder="Enter your password again">
                 <small>Error Message</small>
             </div>
-            <button type="button">Submit</button>
+            <button type="submit">Submit</button>
         </form>
     </div>
+    <script src="./form.js"></script>
 </body>
 </html>
