feat: add error and success msg

--- a/form_validator/index.html
+++ b/form_validator/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <form action="submit" method="POST">
+        <form action="" method="GET">
             <h1>Register With Us</h1>
             <div class="form_group">
                 <label for="user-name" class="form_label">
