--- a/form_validator/index.html
+++ b/form_validator/index.html
@@ -19,28 +19,28 @@
                 <label for="user-name" class="form_label">
                     User name
                 </label>
-                <input type="text" id="user-name" placeholder="Enter your name">
+                <input type="text" id="user-name" placeholder="Enter your name" required>
                 <small>Error Message</small>
             </div>
             <div class="form_group">
                 <label for="email" class="form_label">
                     Email
                 </label>
-                <input type="email" id="user-email" placeholder="Enter your email">
+                <input type="email" id="user-email" placeholder="Enter your email" required>
                 <small>Error Message</small>
             </div>
             <div class="form_group">
                 <label for="password" class="form_label">
                     Password
                 </label>
-                <input type="password" id="user-password" placeholder="Enter your password">
+                <input type="password" id="user-password" placeholder="Enter your password" required>
                 <small>Error Message</small>
             </div>
             <div class="form_group">
                 <label for="password-confirm" class="form_label">
                     Confirm Password
                 </label>
-                <input type="password-confirm" id="user-password-confirm" placeholder="Enter your password again">
+                <input type="password-confirm" id="user-password-confirm" placeholder="Enter your password again" required>
                 <small>Error Message</small>
             </div>
             <button type="submit">Submit</button>
