--- a/Infinite_scroll/index.html
+++ b/Infinite_scroll/index.html
@@ -48,6 +48,11 @@
             </div>
         </div>
     </div>
+    <div class="loader">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <script src="./app.js"></script>
 </body>
 
