--- a/new_year_countdown/index.html
+++ b/new_year_countdown/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>New Year Countdown</h1>
-    <div class="container">
+    <div class="container hidden">
         <div class="item">
             <p id="days"></p>
             <p>DAYS</p>
@@ -29,6 +29,8 @@
             <p>SECONDS</p>
         </div>
     </div>
-    <p class="year">2025</p>
+    <p class="year hidden"></p>
+    <img class="loader" src="./img/spinner.gif" alt="" srcset="">
+    <script src="./app.js"></script>
 </body>
 </html>
